--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
   <h2>Parcourez notre grande sélection d'artistes et d'albums</h2>
   <p>Noter vos albums préférés et gérer votre collection de CD grâce à CDCollection</p>
   <% if current_user == nil %>
-      <%= link_to "S'inscrire", new_user_path, :class => "btn" %>
-      <%= link_to "Se connecter", sign_in_path, :class => "btn" %>
+      <%= link_to "S'inscrire", new_user_registration_path, :class => "btn" %>
+      <%= link_to "Se connecter", new_user_session_path, :class => "btn" %>
   <%end%>
 </div>
 
