--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @user.username %></h2>
+<h2><%= @user.email %></h2>
 
 <p>Albums notés: <%= @rating.count %></p>
 <p>Collection:  <%= @collection.count %></p>
